--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
+    "axios": "^1.2.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
